--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
     "typescript": "^4.6.4"
   },
   "dependencies": {
+    "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.13",
     "@types/lodash": "^4.14.182",
+    "@types/uuid": "^8.3.4",
+    "body-parser": "^1.20.0",
     "copyfiles": "^2.4.1",
     "esm": "^3.2.25",
     "express": "^4.17.21",
     "http-status-codes": "^2.2.0",
     "lodash": "^4.17.21",
-    "openapi-backend": "^5.3.0"
+    "openapi-backend": "^5.3.0",
+    "uuid": "^8.3.2"
   }
 }
