--- a/package.json
+++ b/package.json
@@ -23,13 +23,16 @@
     "@types/express": "^4.17.13",
     "@types/lodash": "^4.14.182",
     "@types/uuid": "^8.3.4",
+    "add": "^2.0.6",
     "body-parser": "^1.20.0",
     "copyfiles": "^2.4.1",
     "esm": "^3.2.25",
     "express": "^4.17.21",
     "http-status-codes": "^2.2.0",
     "lodash": "^4.17.21",
+    "mongoose": "^6.3.3",
     "openapi-backend": "^5.3.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "yarn": "^1.22.18"
   }
 }
